# histogram-manipulator

./: CMakeLists.txt  cmake_install.cmake  main.cpp
MMTI_GUI/: MMTI_GUI.desktop  MMTI_GUI.pro  MMTI_GUI_harmattan.desktop  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
MMTI_GUI/qml/MMTI_GUI/: main.qml
data/: bruit.pgm  bruit2.pgm  rs.pgm  rs2.pgm  rs_ascii.pgm  toto.pgm
src/: Fonction.cpp  Fonction.hpp  Histogramme.cpp  Histogramme.hpp  Image.cpp  Image.hpp  Matrice.cpp  Matrice.hpp  MatriceErreur.cpp  MatriceErreur.hpp  NuagePoint.cpp  NuagePoint.hpp  Point.cpp  Point.hpp  Traitement.cpp  Traitement.hpp  main.cpp
